Lade till JDBC-tester.

--- a/todo.txt
+++ b/todo.txt
@@ -14,7 +14,9 @@ Applikationstyp:	Command line, Spring Boot.
 Byggverktyg:		Gradle
 
 Saker kvar:
--enhetstester (även JDBC)
+-enhetstester
+-JDBC-tester
+-
 
 Saker att testa:
 -Något annat än JDBC för databasanrop (ex https://github.com/JetBrains/Exposed).
